--- a/src/pages/Cronicas.module.css
+++ b/src/pages/Cronicas.module.css
@@ -38,6 +38,7 @@
     text-align: center;
     position: relative;
     padding: 0 20px;
+    padding-top: calc(var(--navbar-height) + 40px);
 }
 
 .heroOverlay {
