--- a/src/pages/Libro.module.css
+++ b/src/pages/Libro.module.css
@@ -204,6 +204,7 @@
     color: white;
     position: relative;
     padding: 0 20px;
+    padding-top: calc(var(--navbar-height) + 40px);
 }
 
 .heroOverlay {
